[tool.poetry]
name = "player-valuation"
version = "0.1.0"
description = ""
authors = ["sh0gun47 <arthomson90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
dvc = "^3.56.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
